[gd_scene load_steps=6 format=3 uid="uid://bqymtf8fuyj54"]

[ext_resource type="Script" path="res://addons/ggs/editor/input_selector/input_selector.gd" id="1_qjksw"]
[ext_resource type="Texture2D" uid="uid://dbervsl0o0ifw" path="res://addons/ggs/assets/search.svg" id="2_cgd6a"]
[ext_resource type="Script" path="res://addons/ggs/editor/input_selector/input_list.gd" id="3_jsbwa"]
[ext_resource type="Texture2D" uid="uid://l0mve5lc0okm" path="res://addons/ggs/assets/collapse_all.svg" id="3_mxhgu"]
[ext_resource type="Texture2D" uid="uid://caajrkkuvle0e" path="res://addons/ggs/assets/expand_all.svg" id="4_3d11l"]

[node name="Margin" type="MarginContainer"]
offset_right = 100.0
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_qjksw")

[node name="InputSelector" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SelectBtn" type="Button" parent="InputSelector"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Input"

[node name="VSeparator" type="HSeparator" parent="InputSelector"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SelectInputWindow" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Select Input"
size = Vector2i(700, 500)
min_size = Vector2i(700, 500)
ok_button_text = "Select"

[node name="MainCtnr" type="VBoxContainer" parent="SelectInputWindow"]
offset_left = 8.0
offset_top = 8.0
offset_right = 692.0
offset_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="SelectInputWindow/MainCtnr"]
layout_mode = 2

[node name="SearchField" type="LineEdit" parent="SelectInputWindow/MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Actions"
clear_button_enabled = true
right_icon = ExtResource("2_cgd6a")

[node name="CollapseAllBtn" type="Button" parent="SelectInputWindow/MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Collapse All"
icon = ExtResource("3_mxhgu")
flat = true

[node name="ExpandAllBtn" type="Button" parent="SelectInputWindow/MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Expand All"
icon = ExtResource("4_3d11l")
flat = true

[node name="InputList" type="Tree" parent="SelectInputWindow/MainCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("3_jsbwa")
